# Procesamiento-Imagenes-ResonanciaMagnetica

./: CMakeLists.txt  Filtros.cpp  Filtros.h  MainWindow.cpp  MainWindow.h  Principal.cpp  Utils.cpp  Utils.h  VideoDialog.cpp  VideoDialog.h  image_stats.py  main.cpp  otrocmake.txt  readme.md
